--- a/src/components/CardsList/style.css
+++ b/src/components/CardsList/style.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100%;
   max-height: 100%;
-  padding: 8px 24px;
+  padding: 0 24px;
 }
 
 .swiper-wrapper {
@@ -14,4 +14,15 @@
 
 .swiper-slide {
   height: 100%;
+  overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.swiper-slide::-webkit-scrollbar {
+  display: none;
+}
+
+.swiper-card {
+  margin: 16px 8px;;
 }
